auth-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-service-routes
spec:
  parentRefs:
  - name: my-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /users/me
      method: GET
    - path:
        type: PathPrefix
        value: /users/me
      method: OPTIONS
    - path:
        type: PathPrefix
        value: /tokens
      method: POST
    backendRefs:
    - name: auth-service
      port: 8000
